--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ background-color: rgb(204, 182, 241);
 }
 
 /* Estilo para cada card individual */
-.card :hover{
+.card-container :hover{
     transform: scale(1.1);
     transition: transform 0.25s ease-in-out;
 }
